# budget-tracker-full-stack

./: .gitignore  budget-tracker.sln
backend/: CMakeLists.txt
backend/include/: Budget.h  BudgetTrackerLib.h  Category.h  DataManager.h  Transaction.h
backend/src/: Budget.cpp  BudgetTrackerLib.cpp  Category.cpp  DataManager.cpp  Transaction.cpp  main.cpp
frontend/BudgetTrackerUI/: App.axaml  App.axaml.cs  BudgetTrackerUI.csproj  Program.cs  ViewLocator.cs  app.manifest
frontend/BudgetTrackerUI/Converters/: BoolToTypeConverter.cs
frontend/BudgetTrackerUI/Models/: Budget.cs  Category.cs  Transaction.cs
frontend/BudgetTrackerUI/Services/: DataService.cs  IDataService.cs  NativeDataService.cs
frontend/BudgetTrackerUI/ViewModels/: MainWindowViewModel.cs  ReactiveViewModelBase.cs  TransactionDialogViewModel.cs  TransactionsViewModel.cs  ViewModelBase.cs
frontend/BudgetTrackerUI/Views/: MainWindow.axaml  MainWindow.axaml.cs  TransactionsView.axaml  TransactionsView.axaml.cs
frontend/BudgetTrackerUI/Views/Dialogs/: MessageDialog.axaml  MessageDialog.axaml.cs  TransactionDialog.axaml  TransactionDialog.axaml.cs
frontend/data/: categories.json  transactions.json
